// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots applications/ApplicationItem Application 1`] = `
<div
  id="root"
>
  <li
    class="MuiListItem-root makeStyles-root MuiListItem-divider makeStyles-divider"
    data-testid="list-item"
  >
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root makeStyles-gridHeader MuiGrid-container MuiGrid-justify-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <h2
                class="MuiTypography-root MuiTypography-h2"
              >
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-mainLink MuiTypography-colorPrimary"
                  href="/apps/123"
                >
                  ABC
                </a>
              </h2>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  arial-label="group-id"
                  class="MuiTypography-root makeStyles-idLabel MuiTypography-body1 MuiTypography-noWrap"
                >
                  xxx-xxx-yyy
                </p>
              </div>
              <div
                class="MuiBox-root MuiBox-root"
              >
                <span
                  class="MuiTypography-root makeStyles-descriptionLabel MuiTypography-body1"
                >
                  App Item Description
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div>
              <button
                aria-controls="simple-menu-2"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-innerDivider MuiDivider-light"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root makeStyles-itemSection MuiGrid-container"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
              >
                INSTANCES
              </span>
              <span
                class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5"
                >
                  1
                </h5>
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorDisabled"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1"
                    >
                      last 24 hours
                    </h6>
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root"
          >
            <hr
              class="MuiDivider-root MuiDivider-vertical"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
              >
                Groups
              </span>
              <div
                class="MuiBox-root MuiBox-root"
              >
                <span
                  class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
                >
                  1
                </span>
              </div>
              <div
                class="MuiBox-root MuiBox-root"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-groupLink MuiTypography-colorPrimary"
                      href="/apps//groups/xxx-xxx-1"
                    >
                      First group
                    </a>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M11.99 18.54l-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27L12 16zm0-11.47L17.74 9 12 13.47 6.26 9 12 4.53z"
                        />
                      </svg>
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        -1
                      </div>
                      instances
                    </div>
                  </div>
                </div>
                <div
                  class="MuiListItem-root MuiListItem-gutters"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <div
                        class="MuiAvatar-root MuiAvatar-circle makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                      />
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <div
                        class="MuiListItemText-root makeStyles-root MuiListItemText-multiline"
                      >
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          <div
                            class="MuiBox-root MuiBox-root"
                          >
                            main
                          </div>
                        </div>
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          <div
                            class="MuiBox-root MuiBox-root"
                          >
                            1.11.3 (ALL)
                          </div>
                          <div
                            class="MuiBox-root MuiBox-root"
                          >
                            <div
                              class="MuiBox-root MuiBox-root"
                            >
                              <div
                                class="MuiBox-root MuiBox-root"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                                  focusable="false"
                                  title="Release date"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                  />
                                  <path
                                    d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                                  />
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root MuiBox-root"
                              >
                                07/18/2019
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`Storyshots applications/ApplicationItem No Groups 1`] = `
<div
  id="root"
>
  <li
    class="MuiListItem-root makeStyles-root MuiListItem-divider makeStyles-divider"
    data-testid="list-item"
  >
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root makeStyles-gridHeader MuiGrid-container MuiGrid-justify-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <h2
                class="MuiTypography-root MuiTypography-h2"
              >
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-mainLink MuiTypography-colorPrimary"
                  href="/apps/123"
                >
                  ABC
                </a>
              </h2>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  arial-label="group-id"
                  class="MuiTypography-root makeStyles-idLabel MuiTypography-body1 MuiTypography-noWrap"
                >
                  xxx-xxx-yyy
                </p>
              </div>
              <div
                class="MuiBox-root MuiBox-root"
              >
                <span
                  class="MuiTypography-root makeStyles-descriptionLabel MuiTypography-body1"
                >
                  App Item Description
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div>
              <button
                aria-controls="simple-menu-1"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-innerDivider MuiDivider-light"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root makeStyles-itemSection MuiGrid-container"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
              >
                INSTANCES
              </span>
              <span
                class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5"
                >
                  1
                </h5>
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorDisabled"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1"
                    >
                      last 24 hours
                    </h6>
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root"
          >
            <hr
              class="MuiDivider-root MuiDivider-vertical"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
              >
                Groups
              </span>
              <div
                class="MuiBox-root MuiBox-root"
              >
                <span
                  class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
                >
                  None
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;
